--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         <a href="https://www.youtube.com/channel/UCaygR-2KnSRhMdrFawJ4pyQ" style="background: #ff0000" class="link">
           <i class="bx bxl-youtube"></i>
         </a>
+        <a href="https://madhurmanoj.blogspot.com" style="background: #000000" class="link">
+          <i class="bx bxl-blogger"></i>
+        </a>
       </div>
 
       <div class="buttons">
