--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <div class="text-data">
         <span class="name">Madhur Manoj</span>
-        <span class="job">Java Full-Stack Developer</span>
+        <span class="job">Full-Stack Developer</span>
       </div>
 
       <div class="media-buttons">
